fix em>code spacing

--- a/16_01/resources/css/style.css
+++ b/16_01/resources/css/style.css
@@ -4,6 +4,9 @@
 /*******************
  *     GLOBAL     *
  *******************/
+::selection {
+  background: #F7781E; /* WebKit/Blink Browsers */
+}
 
  html, body {
     margin: 0px;
@@ -917,7 +920,10 @@ div.usecase a.usecase03-bg {
  * DOXYGEN CONTENT *
  *******************/
  code{
-    /*font-size:14px;*/
+  
+}
+em>code { 
+    padding-left: 0.2em;
 }
 .contents {
     max-width: 80%;
